--- a/_includes/background.html
+++ b/_includes/background.html
@@ -2,23 +2,36 @@
   <div class="section__title">Background</div>
   <div class="section__content">
     <p>
-      I'm currently an Engineer at
-      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Upstatement</a> building things for the web with some awesome people. I recently graduated from
-      <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> after completing three awesome six-month co-ops at
-      <a class="underline-link" href="https://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a>,
-      <a class="underline-link" href="https://starry.com/" target="_blank">Starry</a>, and
-      <a class="underline-link" href="https://www.apple.com/music/" target="_blank">Apple Music</a>.
+      I'm currently a Data Engineer at
+      <a class="underline-link" href="https://dalchemy.com/" target="_blank">d'Alchemy, Bangalore</a> developing data
+      pipelines and database systems from scratch with some awesome people. I graduated from
+      <a class="underline-link" href="https://www.sju.edu.in/" target="_blank">St Joseph's University</a> with a
+      Bachelor's degree specialised in Data Science & Analytics.
     </p>
 
     <p>
-      As a software engineer, I enjoy bridging the gap between engineering and design &mdash; combining my technical knowledge
-      with my keen eye for design to create a beautiful product. My goal is to always build applications that are scalable
-      and efficient under the hood while providing engaging, pixel-perfect user experiences.
+      I discovered Artificial Intelligence in my first year of college and have authored a chapter named,
+      <a class="underline-link"
+        href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003405436-23/revolutionizing-concrete-engineering-khushi-sabarad-sivakannan-subramani"
+        target="_blank">"Revolutionising Concrete Engineering: Predicting Material Properties with AI Insights"</a>
+      published in book:
+      <a class="underline-link"
+        href="https://www.taylorfrancis.com/books/edit/10.1201/9781003405436/artificial-intelligence-multimedia-information-processing-xavier-savarimuthu-sivakannan-subramani-alex-noel-joseph-raj?refId=074cd115-1050-4d96-a54e-a05a3bcdb198&context=ubx"
+        target="_blank">"Artificial Intelligence for Multimedia Information Processing: Tools and Applications"</a>
+      by
+      <a class="underline-link" href="https://taylorandfrancis.com/" target="_blank">Taylor & Francis</a>!
+
+      As a Data Engineer, I enjoy building robust and efficient data pipelines and database systems. My aim is to create
+      scalable solutions that ensure smooth data flow for insightful analysis and informed decision-making.
     </p>
 
     <p>
-      <strong>When I'm not in front of a computer screen</strong>, I'm probably snowboarding, cruising around on my penny board,
-      or crossing off another item on my bucket list.
+      <strong>Whenever I manage to escape the digital world, </strong> you'll likely find me chasing adventures on a
+      drive to some peaceful natural spot. There's nothing like finding calm surrounded by nature! If I'm not out and
+      about, I might be curled up with a captivating novel or lost in a good binge-watching session or listening to some
+      music playing. Oh, and don't even get me started on sports! I've been a total sports fanatic since school, always
+      part of the team, and have some great memories of bringing home wins from all those tournaments. That competitive
+      spirit and adrenaline rush definitely sticks with you!
     </p>
 
     <!-- {% include employment-status.html %} -->
