--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
   </h1>
 
   <h2 class="intro__tagline">I'm
-    <span class="name">Brittany Chiang</span>, a design-minded front-end software engineer focused on building beautiful interfaces &amp; experiences
+    <span class="name">Khushi Sabarad</span>, a software engineer passionate about building and exploring cloud services for data engineering projects.
     <span class="emoji technologist"></span>
   </h2>
 
@@ -12,7 +12,7 @@
     <span>Get in touch </span>
     <span class="emoji pointer"></span>
     <span>
-      <a href="mailto:brittany.chiang@gmail.com" target="_blank" class="highlight-link">brittany.chiang@gmail.com</a>
+      <a href="mailto:khushi.sabarad@gmail.com" target="_blank" class="highlight-link">khushi.sabarad@gmail.com</a>
     </span>
   </h3>
 </header>
