--- a/_includes/background.html
+++ b/_includes/background.html
@@ -4,25 +4,18 @@
     <p>
       I'm currently a Data Engineer at
       <a class="underline-link" href="https://dalchemy.com/" target="_blank">d'Alchemy, Bangalore</a> developing data
-      pipelines and database systems from scratch with some awesome people. I graduated from
+      pipelines and database systems from scratch with some awesome people. As a Data Engineer, I'm passionate about creating scalable solutions that ensure smooth data flow, ultimately enabling insightful analysis and informed decision-making. I graduated from
       <a class="underline-link" href="https://www.sju.edu.in/" target="_blank">St Joseph's University</a> with a
       Bachelor's degree specialised in Data Science & Analytics.
     </p>
 
     <p>
-      I discovered Artificial Intelligence in my first year of college and have authored a chapter named,
-      <a class="underline-link"
+      I discovered Artificial Intelligence in my first year of college and have authored a chapter named, <a class="underline-link"
         href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003405436-23/revolutionizing-concrete-engineering-khushi-sabarad-sivakannan-subramani"
-        target="_blank">"Revolutionising Concrete Engineering: Predicting Material Properties with AI Insights"</a>
-      published in book:
-      <a class="underline-link"
+        target="_blank">"Revolutionising Concrete Engineering: Predicting Material Properties with AI Insights"</a> published in book: <a class="underline-link"
         href="https://www.taylorfrancis.com/books/edit/10.1201/9781003405436/artificial-intelligence-multimedia-information-processing-xavier-savarimuthu-sivakannan-subramani-alex-noel-joseph-raj?refId=074cd115-1050-4d96-a54e-a05a3bcdb198&context=ubx"
         target="_blank">"Artificial Intelligence for Multimedia Information Processing: Tools and Applications"</a>
-      by
-      <a class="underline-link" href="https://taylorandfrancis.com/" target="_blank">Taylor & Francis</a>!
-
-      As a Data Engineer, I enjoy building robust and efficient data pipelines and database systems. My aim is to create
-      scalable solutions that ensure smooth data flow for insightful analysis and informed decision-making.
+      by <a class="underline-link" href="https://taylorandfrancis.com/" target="_blank">Taylor & Francis</a>!
     </p>
 
     <p>
