--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -11,18 +11,10 @@
         </ul>
       </div>
       <div class="skillz__category">
-        <div class="skillz__category__label">Frameworks & Libraries</div>
+        <div class="skillz__category__label">Python Libraries</div>
         <ul>
-          {% for framework in site.data.skills.frameworks %}
-          <li class="skillz__category__item">{{framework.item}}</li>
-          {% endfor %}
-        </ul>
-      </div>
-      <div class="skillz__category">
-        <div class="skillz__category__label">Tools</div>
-        <ul>
-          {% for tool in site.data.skills.tools %}
-          <li class="skillz__category__item">{{tool.item}}</li>
+          {% for library in site.data.skills.libraries %}
+          <li class="skillz__category__item">{{library.item}}</li>
           {% endfor %}
         </ul>
       </div>
@@ -34,6 +26,14 @@
           {% endfor %}
         </ul>
       </div>
+      <div class="skillz__category">
+        <div class="skillz__category__label">Visualization & Development Tools</div>
+        <ul>
+          {% for tool in site.data.skills.tools %}
+          <li class="skillz__category__item">{{tool.item}}</li>
+          {% endfor %}
+        </ul>
+      </div>      
     </div>
   </div>
 </section>
