--- a/_includes/background.html
+++ b/_includes/background.html
@@ -4,15 +4,19 @@
     <p>
       I'm currently a Data Engineer at
       <a class="underline-link" href="https://dalchemy.com/" target="_blank">d'Alchemy, Bangalore</a> developing data
-      pipelines and database systems from scratch with some awesome people. As a Data Engineer, I'm passionate about creating scalable solutions that ensure smooth data flow, ultimately enabling insightful analysis and informed decision-making. I graduated from
+      pipelines and database systems from scratch with some awesome people. As a Data Engineer, I'm passionate about
+      creating scalable solutions that ensure smooth data flow, ultimately enabling insightful analysis and informed
+      decision-making. I graduated from
       <a class="underline-link" href="https://www.sju.edu.in/" target="_blank">St Joseph's University</a> with a
       Bachelor's degree specialised in Data Science & Analytics.
     </p>
 
     <p>
-      I discovered Artificial Intelligence in my first year of college and have authored a chapter named, <a class="underline-link"
+      I discovered Artificial Intelligence in my first year of college and have authored a chapter named, <a
+        class="underline-link"
         href="https://www.taylorfrancis.com/chapters/edit/10.1201/9781003405436-23/revolutionizing-concrete-engineering-khushi-sabarad-sivakannan-subramani"
-        target="_blank">"Revolutionising Concrete Engineering: Predicting Material Properties with AI Insights"</a> published in book: <a class="underline-link"
+        target="_blank">"Revolutionising Concrete Engineering: Predicting Material Properties with AI Insights"</a>
+      published in book: <a class="underline-link"
         href="https://www.taylorfrancis.com/books/edit/10.1201/9781003405436/artificial-intelligence-multimedia-information-processing-xavier-savarimuthu-sivakannan-subramani-alex-noel-joseph-raj?refId=074cd115-1050-4d96-a54e-a05a3bcdb198&context=ubx"
         target="_blank">"Artificial Intelligence for Multimedia Information Processing: Tools and Applications"</a>
       by <a class="underline-link" href="https://taylorandfrancis.com/" target="_blank">Taylor & Francis</a>!
@@ -21,8 +25,8 @@
     <p>
       <strong>Whenever I manage to escape the digital world, </strong> you'll likely find me chasing adventures on a
       drive to some peaceful natural spot. There's nothing like finding calm surrounded by nature! If I'm not out and
-      about, I might be curled up with a captivating novel or lost in a good binge-watching session or listening to some
-      music playing. Oh, and don't even get me started on sports! I've been a total sports fanatic since school, always
+      about, I might be curled up with a captivating novel or lost some good music playing. Oh, and don't even get me
+      started on sports! I've been a total sports fanatic since school, always
       part of the team, and have some great memories of bringing home wins from all those tournaments. That competitive
       spirit and adrenaline rush definitely sticks with you!
     </p>
